fixes vertical alignment for phase label

--- a/src/indigo/less/labels.less
+++ b/src/indigo/less/labels.less
@@ -3,6 +3,6 @@
     border-radius: 1.2em;
 }
 .kbc-label-rounded-small {
-    padding: .2em .9em .3em;
+    padding: .3em .9em .3em;
     border-radius: 1.2em;
 }
